--- a/index.html
+++ b/index.html
@@ -1,16 +1,149 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
-    <title>Code Copy #2</title>
-    
-    <!--Put your CSS inside this style tag-->
-    <style>
-    </style>
-
-  </head>
-  
-  <body>
-  </body>
-  
+	<head>
+	<!--< i src="img/apple-logo.png"></i> -->
+		<title>Apple</title>
+		<link href="css/main.css" type="text/css" rel="stylesheet">
+	</head>
+	<body>
+		<nav>
+			<ul class="nav">
+				<li class="himgs"><img class="navitem1" src="img/apple-logo.png"></li>
+				<li class="hlinks"><a class="navlinks" href="#">Mac</a></li>
+				<li class="hlinks"><a class="navlinks" href="#">iPad</a></li>
+				<li class="hlinks"><a class="navlinks" href="#">iPhone</a></li>
+				<li class="hlinks"><a class="navlinks" href="#">Watch</a></li>
+				<li class="hlinks"><a class="navlinks" href="#">TV</a></li>
+				<li class="hlinks"><a class="navlinks" href="#">Music</a></li>
+				<li class="hlinks"><a class="navlinks" href="#">Support</a></li>
+				<li class="himgs"><img class="navitem2" src="img/search.png"></li>
+				<li class="himgs"><img class="navitem3" src="img/bag.png"></li>
+			</ul>
+		</nav>
+		<header>
+			<img class="hpic" src="img/iphone3.png">
+			<!-- <p class="mainslogan">iPhone.<br>This is 7.</p> -->
+		</header>
+		<section>
+			<img class="spics" src="img/made_by_apple2.png">
+			<img class="spics" src="img/ipad_pro2.png">
+			<img class="spics" src="img/airpods2.png">
+			<img class="spics2" src="img/apple_tv2.png">
+			<div class="clear"></div>
+			<!--
+			<ul>
+				<li class="sli"><img class="spics" src="img/made_by_apple2.png"></li>
+				<li class="sli"><img class="spics" src="img/ipad_pro2.png"></li>
+				<li class="sli"><img class="spics" src="img/airpods2.png"></li>
+				<li class="sli"><img class="spics" src="img/apple_tv2.png"></li>
+			</ul>
+			-->
+			<!--
+			<div class="dc secadd1">The perfect match.<br>Accessories made by Apple.</div>
+			<div class="dc secadd2">iPad Pro<br>Super.Computer.</div>
+			<div class="dc secadd3">AirPods<br>Wireless. Effortless.Magical.</div>
+			<div class="dc secadd4"><img src="">tv<br>The new TV app.One place for<br>everything you want to watch.</div> 
+			-->
+		</section>
+		<footer>
+			<table>
+				<tr>
+					<td>
+						<ul class="flist">
+							<li><strong>Shop and Learn</strong></li>
+							<li>Mac</li>
+							<li>iPad</li>
+							<li>iPhone</li>
+							<li>Watch</li>
+							<li>TV</li>
+							<li>Music</li>
+							<li>iTunes</li>
+							<li>iPod</li>
+							<li>Accessories</li>
+							<li>Gift Cards</li>
+							<li><br></li>
+						</ul>
+					</td>
+					<td>
+						<ul class="flist">
+							<li><strong>Apple Store</strong></li>
+							<li>Find a Store</li>
+							<li>Genius Bar</li>
+							<li>Workshops and Learning</li>
+							<li>Youth Programs</li>
+							<li>Apple Store App</li>
+							<li>Refurbished and Clearance</li>
+							<li>Financing</li>
+							<li>Reuse and Recycling</li>
+							<li>Order Status</li>
+							<li>Shopping Help</li>
+							<li><br></li>
+						</ul>
+					</td>
+					<td>
+						<ul class="flist flist2">
+							<li><strong>For Education</strong></li>
+							<li>Apple and Education</li>
+							<li>Shop for College</li>
+							<li><br></li>
+							<li><strong>For Business</strong></li>
+							<li>Apple and Business</li>
+							<li>Shop for Business</li>
+							<li><br></li>
+							<li><br></li>
+							<li><br></li>
+							<li><br></li>
+							<li><br></li>
+						</ul>
+					</td>
+					<td>
+						<ul class="flist">
+							<li><strong>Account</strong></li>
+							<li>Manage Your Apple ID</li>
+							<li>Apple Store Account</li>
+							<li>iCloud.com</li>
+							<li><br></li>
+							<li><strong>Apple Values</strong></li>
+							<li>Accessibility</li>
+							<li>Education</li>
+							<li>Environment</li>
+							<li>Inclusion and Diversity</li>
+							<li>Privacy</li>
+							<li>Supplier Responsibility</li>
+						</ul>
+					</td>
+					<td>
+						<ul class="flist">
+							<li><strong>About Apple</strong></li>
+							<li>Apple info</li>
+							<li>Newsroom</li>
+							<li>Job Opportunities</li>
+							<li>Press Info</li>
+							<li>Investors</li>
+							<li>Events</li>
+							<li>Contact Apple</li>
+							<li><br></li>
+							<li><br></li>
+							<li><br></li>
+							<li><br></li>
+						</ul>
+					</td>
+			</table>
+			<div class="ftop">
+				<p>More ways to shop: Visit an <span>Apple Store</span>, call 1-800-MY-APPLE, or <span>find a reseller</span>. </p>
+			</div>
+			<hr>
+			<div class="ftop">
+			<div class="left">
+				<p>
+				Copyright © 2017 Apple Inc. All rights reserved. &nbsp; &nbsp
+				<span class="blinks">Privacy Policy</span> &nbsp; &nbsp | &nbsp; &nbsp T<span class="blinks">erms of Use</span> &nbsp; &nbsp | &nbsp; &nbsp <span class="blinks">Sales and Refunds</span> &nbsp; &nbsp | &nbsp; &nbsp <span class="blinks">Legal</span> &nbsp; &nbsp | &nbsp; &nbsp <span class="blinks">Site Map</span>
+				</p>
+			</div>
+			<div class="right">
+				<img src="img/footer_flag.png">
+			</div>
+			</div>
+		</footer>
+	</body>
 </html>
