--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			<div class="ftop">
 			<div class="left">
 				<p>
-				Copyright © 2017 Apple Inc. All rights reserved. &nbsp; &nbsp
+				Copyright &copy 2017 Apple Inc. All rights reserved. &nbsp; &nbsp
 				<span class="blinks">Privacy Policy</span> &nbsp; &nbsp | &nbsp; &nbsp T<span class="blinks">erms of Use</span> &nbsp; &nbsp | &nbsp; &nbsp <span class="blinks">Sales and Refunds</span> &nbsp; &nbsp | &nbsp; &nbsp <span class="blinks">Legal</span> &nbsp; &nbsp | &nbsp; &nbsp <span class="blinks">Site Map</span>
 				</p>
 			</div>
